about and services section style

--- a/index.html
+++ b/index.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE-edge">
     <meta name="viewport" content="width=device_width, initial-scale=1.0">
     <title>Portfolio | Bijoy Biswas</title>
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
-    <link rel = "stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
+
 <body>
     <header class="header">
         <a href="#" class="logo">Portfolio</a>
@@ -27,12 +29,17 @@
             <h3>Hello, It's Me</h3>
             <h1>Bijoy Biswas</h1>
             <h3>And I'am a <span> Data science Enthusiats.</span></h3>
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Iure nisi veniam omnis, minima error quia tempora nesciunt dolore itaque officia provident aperiam voluptas, consequuntur aspernatur aut, in tenetur consectetur! Quo.</p>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Iure nisi veniam omnis, minima error quia
+                tempora nesciunt dolore itaque officia provident aperiam voluptas, consequuntur aspernatur aut, in
+                tenetur consectetur! Quo.</p>
             <div class="social-media">
-                <a href="https://www.facebook.com/biswasbijoy414" target="_blank"><i class='bx bxl-facebook-circle' ></i></a>
+                <a href="https://www.facebook.com/biswasbijoy414" target="_blank"><i
+                        class='bx bxl-facebook-circle'></i></a>
                 <a href="https://twitter.com/biswasbijoy_414" target="_blank"><i class='bx bxl-twitter'></i></a>
-                <a href="https://www.instagram.com/biswas.bijoy.414/" target="_blank"><i class='bx bxl-instagram-alt' ></i></a>
-                <a href="https://www.linkedin.com/in/biswasbijoy/" target="_blank"><i class='bx bxl-linkedin-square' ></i></a>
+                <a href="https://www.instagram.com/biswas.bijoy.414/" target="_blank"><i
+                        class='bx bxl-instagram-alt'></i></a>
+                <a href="https://www.linkedin.com/in/biswasbijoy/" target="_blank"><i
+                        class='bx bxl-linkedin-square'></i></a>
             </div>
             <a href="#" class="btn">Download CV</a>
         </div>
@@ -50,10 +57,54 @@
         <div class="about-content">
             <h2 class="heading">About <span>Me</span></h2>
             <h3>Python Developer</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis accusantium officiis quae voluptatem, voluptates hic nostrum sint vero repudiandae consequuntur, architecto distinctio eligendi in adipisci, ipsam voluptatibus minus animi esse.</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis accusantium officiis quae voluptatem,
+                voluptates hic nostrum sint vero repudiandae consequuntur, architecto distinctio eligendi in adipisci,
+                ipsam voluptatibus minus animi esse.</p>
             <a href="#" class="btn">Read More..</a>
         </div>
     </section>
+
+    <section class="services" id="services">
+        <h2 class="heading">Our <span>Services</span></h2>
+        <div class="services-container">
+            <div class="services-box">
+                <i class='bx bx-code-alt'></i>
+                <h3>Web Applicaions</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus facere alias rerum doloribus et
+                    placeat quasi, distinctio error maiores odit! Aliquid facere
+                    quibusdam voluptatibus maiores exercitationem
+                    beatae deserunt repellendus reprehenderit.</p>
+                <a href="#" class="btn">Read More..</a>
+            </div>
+
+            <div class="services-box">
+                <i class='bx bxs-chart'></i>
+                <h3>Data Analysis</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus facere alias rerum doloribus et
+                    placeat quasi, distinctio error maiores odit! Aliquid facere
+                    quibusdam voluptatibus maiores exercitationem
+                    beatae deserunt repellendus reprehenderit.</p>
+                <a href="#" class="btn">Read More..</a>
+            </div>
+
+
+            <div class="services-box">
+                <i class='bx bxs-bar-chart-alt-2'></i>
+                <h3>Data Visualization</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus facere alias rerum doloribus et
+                    placeat quasi, distinctio error maiores odit! Aliquid facere
+                    quibusdam voluptatibus maiores exercitationem
+                    beatae deserunt repellendus reprehenderit.</p>
+                <a href="#" class="btn">Read More..</a>
+            </div>
+        </div>
+    </section>
+
+
+
+
+
     <script src="js/script.js"></script>
 </body>
+
 </html>
