--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
         </nav>
     </header>
 
+
     <!-- Home Section  -->
     <section class="home" id="home">
         <div class="home-content">
@@ -64,6 +65,7 @@
         </div>
     </section>
 
+    <!-- Service Section -->
     <section class="services" id="services">
         <h2 class="heading">Our <span>Services</span></h2>
         <div class="services-container">
@@ -101,6 +103,7 @@
     </section>
 
 
+    <!-- Portfolio Section -->
     <section class="portfolio" id="portfolio">
         <h2 class="heading">Latest <span>Project</span></h2>
 
@@ -174,7 +177,7 @@
     </section>
 
 
-
+    <!-- Contact Section -->
     <section class="contact" id="contact">
         <h2 class="heading">Contact <span>Me!</span></h2>
 
@@ -193,6 +196,18 @@
             <input type="submit" value="Send Message" class="btn"> 
         </form>
     </section>
+
+
+    <!-- Footer -->
+    <footer class="footer">
+         <div class="footer-text">
+            <p>Copyright &copy; 2023 by Bijoy | All Rights Reserved.</p>
+         </div>
+
+         <div class="footer-iconTop">
+            <a href="#home"><i class='bx bx-up-arrow-alt'></i></a>
+         </div>
+    </footer>
 
     <script src="js/script.js"></script>
 </body>
