scroll reveal and typed js added

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <div class="home-content">
             <h3>Hello, It's Me</h3>
             <h1>Bijoy Biswas</h1>
-            <h3>And I'am a <span> Data science Enthusiats!</span></h3>
+            <h3>And I'am a <span class="multiple-text"></span></h3>
             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Iure nisi veniam omnis, minima error quia
                 tempora nesciunt dolore itaque officia provident aperiam voluptas, consequuntur aspernatur aut, in
                 tenetur consectetur! Quo.</p>
@@ -209,6 +209,13 @@
          </div>
     </footer>
 
+    <!-- Scroll Reveal -->
+    <script src="https://unpkg.com/scrollreveal"></script>
+
+    <!-- typed js  -->
+    <script src="https://unpkg.com/typed.js@2.1.0/dist/typed.umd.js"></script>
+
+    <!-- Custom js -->
     <script src="js/script.js"></script>
 </body>
 
